# kernel.api.system-resource

./: CMakeLists.txt  project.config  resourced.manifest  resourced.rule  resourced_nodb.manifest  system-resource.pc.in
CMakeLists/: init-needed-environment.txt  libs.txt  proc-stat.txt  resourced.txt
data/: resourced_proc_exclude.ini  traffic_db.sql
include/: data_usage.h  proc_stat.h  rd-network.h  resourced.h
packaging/: resourced.service  resourced.socket  resourced.spec  system-resource.spec
src/block/: block-monitor.c  block.c  block.conf
src/common/: cgroup.c  cgroup.h  config-parser.c  config-parser.h  const.h  edbus-handler.c  edbus-handler.h  file-helper.c  file-helper.h  filemap.c  freezer-common.h  logging-common.h  module-data.c  module-data.h  module.c  module.h  notifier.h  proc-common.h  procfs.c  procfs.h  swap-common.h  trace.h  util.c  util.h
src/cpu/: cpu.c  logging-cpu.c
src/freezer/: freezer-cgroup.c  freezer-process.c  freezer-vconf-callbacks.c  freezer.c  freezer.conf  libsystem-freezer.so.arm
src/heart/: decision-memory.c  decision.c  heart-abnormal.c  heart-battery.c  heart-cpu.c  heart-memory.c  heart-storage.c  heart.c  heart.conf  logging-battery.c  logging-cpu.c  logging-export.c  logging-memory.c  logging-storage.c  logging.c
src/logging/: logging.c
src/memory/: helper.c  helper.h  logging-memory.c  lowmem-dbus.c  lowmem-handler.c  lowmem-handler.h  memcontrol.c  memcontrol.h  memory_eng.conf  memory_user.conf  vmpressure-lowmem-handler.c
src/memps/: memps.c
src/network/: CMakeLists.txt  (+16 more)
src/test/: CMakeLists.txt
(+35 files in other folders)
